# logitechharmonyhub

./: .gitignore  README.md  catch_uboot.py  hacs.json  install.sh  uartctl.py
backups/: README.md  mtd3-rootfs-manifest.txt  sqextract-atheros-lzma.py
docs/: README.md  board-access-runbook.md  boot-and-uboot.md  cli.md  firmware-backup.md  getting-started.md  hardware-specs.md  http-api.md  ir-api-project.md  ir-database-integration-plan.raw.txt  ir-hardware-reverse-engineering.raw.txt  ir-protocol-reverse-engineering.raw.txt  ir-receive-learn-plan.raw.txt  ir-service-buildplan.md  rf-remote-reverse-engineering.md  uart-console.md  usb-gadget-console.md
experiments/: README.md
homeassistant/: README.md  hacs.json
service/: build-mips.sh  rcS.local  standalone-ir-bringup.sh
service/irapi/: Cargo.toml  README.md  hal_main_decompiled_reference.lua  hal_utils_decompiled_reference.lua  hbus_decompiled_reference.lua  hbushttpserverconnector_decompiled_reference.lua  httpserverconnector_decompiled_reference.lua  irsender_decompiled_reference.lua  ltcp_decompiled_reference.lua  ltcpserverconnector_decompiled_reference.lua
service/irapi/.cargo/: config.toml
service/irapi/codes/: irdb.txt  irdb_default.txt
service/irapi/src/: db.rs  enc.rs  i2s.rs  ir.rs  json.rs  learn.rs  main.rs  mem.rs  midea.rs  rf.rs  util.rs  web.rs
service/irapi/web/: index.html
service/rustprobe/: Cargo.toml  rustprobe.upx
service/rustprobe/.cargo/: config.toml
tools/: b64decode.lua  backup_all.sh  build_irdb.py  dumpflash.lua  dumpflash_rle.lua  extract_b64.py  extract_rle64.py  (+5 more)
(+30 files in other folders)
